--- a/Vaja07SKUPNA/Vaja07SKUPNA.csproj
+++ b/Vaja07SKUPNA/Vaja07SKUPNA.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pit_Trikotnik.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
